Fix overflow scroll caused by mathjax shortcode

--- a/assets/styles/partials/_content.scss
+++ b/assets/styles/partials/_content.scss
@@ -312,6 +312,7 @@
 
   & div.has-jax {
     margin: 2rem auto;
+    overflow-x: scroll;
   }
 
   & .MathJax_Display,
